# my-tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: feature-ideas.md  menu-icon-image-generation.md  project-walkthrough.md  tauri-mental-model.md  technical-stack.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
