[package]
name = "my-tools"
version = "0.1.0"
description = "A small desktop tools app."
authors = ["katsu"]
edition = "2021"

[lib]
name = "my_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
